# pm-analyst-agent

./: .env.example  README.md  prd.md
.veris/: .dockerignore  .gitignore  Dockerfile.sandbox  veris.yaml
backend/: pyproject.toml
backend/app/: auth.py  config.py  main.py
backend/app/services/: ado_client.py  agent_service.py  ms_graph.py
backend/app/services/agents/: pm_agent.py
backend/app/services/tools/: ado_tools.py  ms_graph_tools.py
backend/docs/: Epic Brief Template.md  JobAid_Feature-Brief.md
pm-assistant/: package-lock.json  package.json
pm-assistant/app/: layout.tsx  page.tsx
pm-assistant/app/auth/callback/: page.tsx
pm-assistant/components/: login-screen.tsx
pm-assistant/components/chat/: chat-input.tsx  chat-message.tsx  chat-panel.tsx
pm-assistant/components/providers/: auth-provider.tsx
pm-assistant/hooks/: use-websocket.ts
pm-assistant/lib/: auth.ts  file-parser.ts
